[package]
name = "rslox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
once_cell = "1.19.0"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.52"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
